# stm32_framework

./: .gitignore  CMakeLists.txt  Readme.md  cmake-variants.yaml
Core/: CMakeLists.txt
Core/Inc/: led.h  log.h  main.h  stm32_it.h  stm32f4xx_it.h
Core/Log/: log.c  log.h
Core/Log/Driver/: log_driver.c  log_driver.h
Core/Src/: led.c  log.c  main.c  main_f4.c  stm32_it.c  stm32f4xx_it.c  stm32l1xx_it.c  syscalls.c
Core/src/: syscalls.c  sysmem.c
HAL/: CMakeLists.txt
HAL/Inc/: stm32f1xx_hal_conf.h  stm32f4xx_hal_conf.h
OS/: CMakeLists.txt  FreeRTOSConfig.h
Tests/: CMakeLists.txt
Tests/Log_driver/: CMakeLists.txt  main_test.c
Tests/Template/: CMakeLists.txt  main_test.c
Tests/log/: main.c
Tests/log_driver/: main.c
Tests/mock/: mock_freertos.c  mock_freertos.h  mock_log_driver.c  mock_log_driver.h  mock_stm32l1xx.c  mock_stm32l1xx.h
cmake/: freertos.cmake  stm32f4xx_hal.cmake  stm32f4xx_hal_driver.cmake  stm32l1xx_hal.cmake  stm32l1xx_hal_driver.cmake  toolchain-arm-none-eabi.cmake  toolchain-native.cmake
cmake/stm32-board/: stm32-config.cmake
cmake/stm32-board/stm32f1/: stm32f1-config.cmake
cmake/stm32-board/stm32f1/stm32f100rbtx/: stm32f100rbtx-config.cmake
cmake/stm32-board/stm32f1/stm32f103c8t6/: stm32f103c8t6-config.cmake
cmake/stm32-board/stm32f4/: stm32f4-config.cmake
cmake/stm32-board/stm32f4/stm32f446retx/: stm32f446retx-config.cmake
cmake/stm32-board/stm32l1/: stm32l1-config.cmake
cmake/stm32-board/stm32l1/stm32l152retx/: stm32l152retx-config.cmake  stm32l152retx.ld
config/: nucleo-f446re.repl  nucleo-f446re.resc  openocd.cfg
lib/hal/: CMakeLists.txt
lib/hal/Inc/: stm32f1xx_hal_conf.h  stm32f4xx_hal_conf.h
lib/rtos/: CMakeLists.txt  FreeRTOSConfig.h
src/: CMakeLists.txt  console.c  console.h  main.c  shell.c  shell.h
test/: CMakeLists.txt  test_template.c
test/end-to-end/: test_main.py
test/mock/: mock_console.c  mock_console.h
test/ut/: test_shell.c
