cmake_minimum_required(VERSION 3.20)

include(cmake/stm32-board/stm32-config.cmake)

if(SELECTED_BOARD STREQUAL stm32f446retx)
	include(cmake/stm32-board/stm32f4/stm32f4-config.cmake)
	include(cmake/stm32-board/stm32f4/stm32f446retx/stm32f446retx-config.cmake)
elseif(SELECTED_BOARD STREQUAL stm32l152retx)
	include(cmake/stm32-board/stm32l1/stm32l1-config.cmake)
	include(cmake/stm32-board/stm32l1/stm32l152retx/stm32l152retx-config.cmake)
elseif(SELECTED_BOARD STREQUAL stm32f103c8t6)
	include(cmake/stm32-board/stm32f1/stm32f1-config.cmake)
	include(cmake/stm32-board/stm32f1/stm32f103c8t6/stm32f103c8t6-config.cmake)
else()
	message(FATAL_ERROR "Must to specify SELECTED_BOARD with correct board : \r\n${list_available_board}")
endif()

if(CMAKE_BUILD_TYPE STREQUAL Debug)
	include(cmake/toolchain-arm-none-eabi.cmake)
elseif(CMAKE_BUILD_TYPE STREQUAL Release)
	include(cmake/toolchain-arm-none-eabi.cmake)
elseif(CMAKE_BUILD_TYPE STREQUAL Test)
	include(cmake/toolchain-native.cmake)
else()
	message(FATAL_ERROR "Must to specify CMAKE_BUILD_TYPE as Debug, Release or Test")
endif()

project(Openpill)

enable_language(C ASM)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

if(CMAKE_BUILD_TYPE STREQUAL Debug)
	add_subdirectory(Core)
    add_subdirectory(HAL)
	add_subdirectory(OS)
elseif(CMAKE_BUILD_TYPE STREQUAL Release)
	add_subdirectory(Core)
    add_subdirectory(HAL)
	add_subdirectory(OS)
elseif(CMAKE_BUILD_TYPE STREQUAL Test)
	include(CTest)
	set(CMAKE_C_EXTENSIONS ON)
    include(cmake/cmocka.cmake)
	add_subdirectory(Tests)
	message("Test selected. Be careful, binary is generated by a native compiler (no cross-compilation).")
endif()